@@ -29,7 +29,7 @@
       -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true
     </ipv6.server.jvm.args>
     <server.jvm.args>
-        ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}
+        ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}
     </server.jvm.args>
   </properties>
 
@@ -137,6 +137,24 @@
 
     <profiles>
         <profile>
+          <id>release</id>
+          <build>
+              <plugins>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-install-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>default-install</id>
+                      <phase>install</phase>
+                    </execution>
+                  </executions>
+                  <inherited>false</inherited>
+                </plugin>
+              </plugins>
+          </build>
+        </profile>
+        <profile>
             <id>arq</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -156,13 +174,9 @@
                         <configuration>
                             <skip>false</skip>
                             <systemPropertyVariables combine.children="append">
-                                <!--
-                                    Used in arquillian.xml
-                                -->
                                 <server.jvm.args>${server.jvm.args}</server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -237,6 +251,17 @@
                 <server.jvm.args>
                     ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jacoco}
                 </server.jvm.args>
+            </properties>
+        </profile>
+        <profile>
+            <id>j9</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.jdk9>
+                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+                </jvm.args.jdk9>
             </properties>
         </profile>
     </profiles>
