@@ -27,6 +27,10 @@
   <properties>
     <openjdk-orb.jar>${settings.localRepository}/org/jboss/openjdk-orb/openjdk-orb/${version.org.jboss.openjdk-orb}/openjdk-orb-${version.org.jboss.openjdk-orb}.jar</openjdk-orb.jar>
     <idlj.boot.args>-Xbootclasspath/p:${openjdk-orb.jar}</idlj.boot.args>
+    <modular.jdk.args>--upgrade-module-path ${project.build.directory}/upgrademodulepath --add-exports java.corba/org.omg.CosTransactions=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED</modular.jdk.args>
+
+    <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
+    <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
   </properties>
 
   <build>
@@ -94,7 +98,6 @@
       <artifactId>ironjacamar-spec-api</artifactId>
       <version>${version.org.jboss.ironjacamar}</version>
       <scope>provided</scope>
-      <!-- TODO AS7 -->
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
@@ -108,6 +111,7 @@
       <version>${version.org.jboss.logging.jboss-logging-processor}</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -151,10 +155,280 @@
       <artifactId>h2</artifactId>
       <version>${version.com.h2database}</version>
       <scope>test</scope>
-    </dependency>    
+    </dependency>
+
   </dependencies>
 
   <profiles>
+    <profile>
+      <id>j9</id>
+      <activation>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <version.compiler.plugin>3.6.0</version.compiler.plugin>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl-tests</artifactId>
+          <version>${project.version}</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>${java.corba.patch.name}</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+              <execution>
+                <id>copy-dependencies</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jboss.narayana.jts</groupId>
+                      <artifactId>${java.corba.patch.name}</artifactId>
+                      <version>${project.version}</version>
+                      <type>${project.packaging}</type>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>org.jboss.narayana.jta</groupId>
+                      <artifactId>narayana-jta-j9-module</artifactId>
+                      <version>${project.version}</version>
+                      <type>jar</type>
+                      <outputDirectory>${project.build.directory}/upgrademodulepath</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <!-- disable maven compiler in favour of the ant javac task
+            (when https://issues.apache.org/jira/browse/MCOMPILER-279 is fixed renable it)
+            -->
+<!--
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-compile</id>
+                <phase>none</phase>
+              </execution>
+              <execution>
+                <id>default-testCompile</id>
+                <phase>none</phase>
+              </execution>
+            </executions>
+          </plugin>
+-->
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+              <execution>
+                <id>compile-j9</id>
+                <phase>compile</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <tasks name="compile sources">
+                    <mkdir dir="${project.build.directory}/classes"/>
+                    <property name="compile_classpath" refid="maven.compile.classpath"/>
+                    <javac verbose="yes" destdir="${project.build.directory}/classes" classpath="${compile_classpath}"
+                      excludes="**/javaidl/**,**/ibmorb/**,**/jacorb/**">
+<!--
+                    <arg>-upgrade-module-path</arg>
+                    <arg>${project.build.directory}/upgrademodulepath</arg>
+                    <arg>-add-modules</arg>
+                    <arg>java.corba,java.transaction</arg>
+-->
+                      <compilerarg value="--upgrade-module-path"/>
+                      <compilerarg value="${project.build.directory}/upgrademodulepath"/>
+
+                      <compilerarg value="--add-modules"/>
+                      <compilerarg value="java.corba"/>
+                      <compilerarg value="--patch-module"/>
+                      <compilerarg value="java.corba=${java.corba.patch.jar}"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.CORBA=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.CORBA.portable=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.PortableInterceptor=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.PortableServer=ALL-UNNAMED"/>
+                      <src>
+                        <pathelement location="${project.build.sourceDirectory}"/>
+                      </src>
+                    </javac>
+                  </tasks>
+                </configuration>
+              </execution>
+              <execution>
+                <id>testCompile-j9</id>
+                <phase>test-compile</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <tasks name="compile test sources">
+                    <mkdir dir="${project.build.directory}/test-classes"/>
+                    <property name="compile_classpath" refid="maven.compile.classpath"/>
+                    <property name="test_classpath" refid="maven.test.classpath"/>
+                    <javac destdir="${project.build.directory}/test-classes" classpath="${compile_classpath}:${test_classpath}"
+                      excludes="**/javaidl/**,**/ibmorb/**,**/jacorb/**,**/GenericRecoveryCreatorUnitTest.java">
+                      <compilerarg value="--add-modules"/>
+                      <compilerarg value="java.corba"/>
+                      <compilerarg value="--upgrade-module-path"/>
+                      <compilerarg value="${project.build.directory}/upgrademodulepath"/>
+
+                      <compilerarg value="--patch-module"/>
+                      <compilerarg value="java.corba=${java.corba.patch.jar}"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.CORBA=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.CORBA.portable=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.PortableInterceptor=ALL-UNNAMED"/>
+                      <compilerarg value="--add-exports"/>
+                      <compilerarg value="java.corba/org.omg.PortableServer=ALL-UNNAMED"/>
+
+                      <src>
+                        <pathelement location="${project.build.testSourceDirectory}"/>
+                      </src>
+                    </javac>
+                  </tasks>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${version.compiler.plugin}</version>
+            <executions>
+              <execution>
+                <phase>none</phase>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <id>default-compile</id>
+                <configuration>
+                  <!-- fork is needed so compiler args can be used -->
+                  <fork>true</fork>
+                  <compilerArgs>
+                    <arg>--upgrade-module-path</arg>
+                    <arg>${project.build.directory}/upgrademodulepath</arg>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba,java.transaction</arg>
+
+<!--
+                    <arg>-upgrade-module-path</arg>
+                    <arg>${project.build.directory}/upgrademodulepath</arg>
+                    <arg>-add-modules</arg>
+                    <arg>java.corba,java.transaction</arg>
+                    <arg>-add-exports</arg>
+                    <arg>java.corba/org.omg.CORBA.portable=ALL-UNNAMED</arg>
+-->
+<!--
+                    <arg>-patch-module</arg>
+                    <arg>java.corba=${java.corba.patch.jar}</arg>
+                    <arg>-add-exports</arg>
+                    <arg>java.corba/org.omg.CORBA=ALL-UNNAMED</arg>
+                    <arg>-add-exports</arg>
+                    <arg>java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED</arg>
+                    <arg>-add-exports</arg>
+                    <arg>java.corba/org.omg.PortableInterceptor=ALL-UNNAMED</arg>
+                    <arg>-add-exports</arg>
+                    <arg>java.corba/org.omg.PortableServer=ALL-UNNAMED</arg>
+-->
+                  </compilerArgs>
+                  <excludes>
+                    <exclude>**/jacorb/**</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>default-testCompile</id>
+                <phase>none</phase>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--patch-module</arg>
+                    <arg>java.corba=${java.corba.patch.jar}</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/org.omg.CORBA=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/org.omg.CORBA.portable=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/org.omg.PortableInterceptor=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/org.omg.PortableServer=ALL-UNNAMED</arg>
+                  </compilerArgs>
+                  <excludes>
+                    <exclude>**/jacorb/**</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <skip>false</skip>
+                  <excludes>
+                    <exclude>**/common/**</exclude>
+                    <exclude>**/ExampleXAResource.java</exclude>
+                    <exclude>**/JTSTestCase.java</exclude>
+                    <exclude>**/LastOnePhaseResource.java</exclude>
+                    <exclude>**/implicit/**</exclude>
+                  </excludes>
+                  <classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
+                  </classpathDependencyExcludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>jts-jacorb</id>
       <activation>
@@ -214,6 +488,7 @@
                   </excludes>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-tests</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
@@ -242,9 +517,8 @@
         </dependency>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
+          <artifactId>idlj-idl-tests</artifactId>
           <version>${project.version}</version>
-          <type>test-jar</type>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -317,9 +591,8 @@
         </dependency>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
+          <artifactId>idlj-idl-tests</artifactId>
           <version>${project.version}</version>
-          <type>test-jar</type>
           <scope>test</scope>
         </dependency>
         <dependency>
